k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ronn4/projectmanager:17929e0e6b1929ad4b8faa8b569daff1b70b5381
          ports:
            - containerPort: 8080
