k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"   # 🔐 enable cert-manager
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ron.project.devops
      secretName: tls-secret   # 🔐 cert will be stored here

  rules:
    - host: ron.project.devops
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
